--- a/Sahinh.html
+++ b/Sahinh.html
@@ -8,28 +8,30 @@
     <meta name="description" content="600 Câu Hỏi Sát Hạch Lái Xe 2025 - Ôn thi lý thuyết bằng lái xe hạng B, C1,C, D,D1,D2 với bộ đề chuẩn của Bộ Công An">
     <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết,sa hình lái xe, ôn thi lái xe, học lái xe, bằng lái xe hạng B,C,D">
     <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266, Tài liệu học lái xe, Hướng dẫn thi bằng lái xe, Mẹo thi lý thuyết lái xe">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Thêm Font Awesome cho icon âm thanh -->
+    Thêm Font Awesome cho icon âm thanh -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-    <style>
-        a {
-            text-decoration: none;
-            color: inherit;
-        }
-        
-        span a {
-            color: #b30000;
-            font-weight: normal;
-        }
-    </style>
+
 </head>
 
 <body>
+    <div id="top"></div>
+    <!-- Chat Zalo -->
+    <div id="zalo-chat-btn" class="zalo-chat-btn">
+        <img src="image/icon_zalo.svg" alt="Chat Zalo">
+        <span>Chat với tôi</span>
+    </div>
+    <script>
+        document.getElementById('zalo-chat-btn').addEventListener('click', function() {
+            window.open('https://zalo.me/0904639896', '_blank');
+        });
+    </script>
     <!--Start of Tawk.to Script-->
     <script script type="text/javascript">
         var Tawk_API = Tawk_API || {},
@@ -46,24 +48,10 @@
     </script>
     <!--End of Tawk.to Script-->
 
-    <!-- Chat Zalo -->
-    <div id="zalo-chat-btn" class="zalo-chat-btn">
-        <img src="image/icon_zalo.svg" alt="Chat Zalo">
-        <span>Chat với tôi</span>
-    </div>
-    <script>
-        document.getElementById('zalo-chat-btn').addEventListener('click', function() {
-            window.open('https://zalo.me/0904639896', '_blank');
-        });
-    </script>
-    <!-- End Chat Zalo -->
-
-    <div id="top"></div>
-
     <header class="top-bar modern-marquee">
         <div class="marquee-content">
             <p>Mọi thông tin cần tìm hiểu về dịch vụ dạy lái xe trên công nghệ giả lập và bổ túc tay lái mới xin quý khách vui lòng liên hệ hotline: 09.8888.2266.
-                <span class="blink">💥Taylaimoi.com - 120mophong.com 💥</span>
+                <span class="blink">💥 Taylaimoi.com - 120mophong.com 💥</span>
                 <span>Xin chân thành cảm ơn! "Phía trước tay lái là cuộc sống của bạn và mọi người, phía sau tay lái là gia đình của bạn" 💥120mophong.com & Taylaimoi.com 💥</span></p>
             <!-- <p>Thông tin hỗ trợ: <strong>0988882266</strong> | Email: Taylaimoi226@gmail.com</p> -->
     </header>
@@ -75,25 +63,29 @@
                     <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
             <div class="contact">
-                <span><i class="fa-solid fa-phone" style="color: #b30000;"></i> Thầy Tuấn - Tiếp nhận đăng ký hồ sơ: <a href="tel:0904639896">0904.639.896</a></span>
+                <span><i class="fa-solid fa-phone" style="color: #b30000;"></i> Thầy Tuấn - Tiếp nhận đăng ký hồ sơ: <a href="tel:0904639896">0904639896</a></span>
                 <span><i class="fa-solid fa-square-phone-flip"style="color: #b30000"></i> Hotline Taylaimoi.com: <a href="tel:0988882266">09.8888.2266</a></span>
                 <span><i class="fa-solid fa-house" style="color: #b30000"></i>  Thư CSKH: <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
                 <span><i class="fa-solid fa-envelope-open-text" style="color: #b30000"></i> Địa chỉ:<b> 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</b></span>
             </div>
         </div>
     </nav>
+    <section class="contact-section">
+        <a href="tel:0989465167" class="call-button" title="Gọi ngay"><i class="fas fa-phone"></i></a>
+    </section>
 
-    <section class="container">
+    <div class="container py-4">
         <ul class="main-menu" id="mainMenu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
-            <li><a href="Sahinh.html"><i class="fa-solid fa-book"></i> 11 bài sa hình</a></li>
+            <li><a href="Sahinh.html"><i class="fa-solid fa-image"></i> 11 Bài sa hình</a></li>
             <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
             <li><a href="Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
             <li><a href="Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
         </ul>
-
+    </div>
+    <main class="container">
         <!-- PDF Viewer Section -->
         <div class="pdf-header">
             <h1>11 BÀI THI SA HÌNH HẠNG B,C1</h1>
@@ -156,7 +148,7 @@
         </div>
 
 
-    </section>
+    </main>
 
 
 
