--- a/Video.html
+++ b/Video.html
@@ -8,6 +8,7 @@
     <meta name="description" content="600 Câu Hỏi Sát Hạch Lái Xe 2025 - Ôn thi lý thuyết bằng lái xe hạng B, C1,C, D,D1,D2 với bộ đề chuẩn của Bộ Công An">
     <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
     <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -341,6 +342,7 @@
 
         <div class="category-filter">
             <button class="filter-btn active" data-category="all">Tất cả</button>
+            <button class="filter-btn" data-category="simulation">Giả lập</button>
             <button class="filter-btn" data-category="theory">Lý thuyết</button>
             <button class="filter-btn" data-category="practice">Thực hành</button>
             <button class="filter-btn" data-category="tips">Mẹo thi</button>
@@ -349,7 +351,7 @@
 
         <div class="video-grid">
             <!-- Video 1 -->
-            <div class="video-card" data-category="practice">
+            <div class="video-card" data-category="simulation">
                 <div class="video-thumbnail">
                     <img src="https://img.youtube.com/vi/f3eFAo18ujc/maxresdefault.jpg" alt="Hướng dẫn lái xe số sàn cơ bản">
                     <div class="play-icon" data-video="f3eFAo18ujc">
@@ -367,9 +369,10 @@
             </div>
 
             <!-- Video 2 -->
-            <div class="video-card" data-category="practice">
+            <div class="video-card" data-category="simulation">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/Kh0ZXVpW0r4/maxresdefault.jpg" alt="Hướng dẫn lái xe số sàn cơ bản">
+                    <!-- <img src="https://img.youtube.com/vi/Kh0ZXVpW0r4/maxresdefault.jpg" alt="Hướng dẫn lái xe số sàn cơ bản"> -->
+                    <img src="image/thumnail-yt/video2.png" alt="VTV - Học lái xe với công nghệ thực tế ảo đầu tiên duy nhất tại Việt Nam">
                     <div class="play-icon" data-video="Kh0ZXVpW0r4">
                         <i class="fas fa-play"></i>
                     </div>
@@ -386,9 +389,9 @@
 
 
             <!-- Video 3 -->
-            <div class="video-card" data-category="practice">
+            <div class="video-card" data-category="simulation">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/VXocTs6f-S0/maxresdefault.jpg" alt="Kỹ thuật lùi xe và đỗ xe">
+                    <img src="https://img.youtube.com/vi/VXocTs6f-S0/maxresdefault.jpg" alt="Giải lập học lái xe ô tô">
                     <div class="play-icon" data-video="VXocTs6f-S0">
                         <i class="fas fa-play"></i>
                     </div>
@@ -404,10 +407,10 @@
             </div>
 
             <!-- Video 4 -->
-            <div class="video-card" data-category="practice">
+            <div class="video-card" data-category="safety">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/TFLwTCamQDc/maxresdefault.jpg" alt="Hướng dẫn thực hành lái xe">
-                    <div class="play-icon" data-video="TFLwTCamQDc">
+                    <img src="https://img.youtube.com/vi/Aog3s6NkYyE/maxresdefault.jpg" alt="Hướng dẫn thực hành lái xe">
+                    <div class="play-icon" data-video="Aog3s6NkYyE">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
@@ -422,9 +425,10 @@
             </div>
 
             <!-- Video 5 -->
-            <div class="video-card" data-category="tips">
+            <div class="video-card" data-category="simulation">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/kZMsDWD2smE/maxresdefault.jpg" alt="Mẹo thi sa hình">
+                    <!-- <img src="https://img.youtube.com/vi/kZMsDWD2smE/maxresdefault.jpg" alt="Mẹo thi sa hình"> -->
+                    <img src="image/thumnail-yt/video5.jpg" alt="Trải nghiệm công nghệ thực tế ảo học lái ô tô đầu tiên tại Việt Nam">
                     <div class="play-icon" data-video="kZMsDWD2smE">
                         <i class="fas fa-play"></i>
                     </div>
@@ -442,33 +446,71 @@
             <!-- Video 6 -->
             <div class="video-card" data-category="safety">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/2EUOqbFdyts/maxresdefault.jpg" alt="An toàn khi lái xe ban đêm">
-                    <div class="play-icon" data-video="2EUOqbFdyts">
+                    <!-- <img src="https://img.youtube.com/vi/7SW5ZpUnOJ8/maxresdefault.jpg" alt="An toàn khi lái xe ban đêm"> -->
+                    <img src="image/thumnail-yt/video6.jpg" alt="Tình huống nguy hiểm khi lùi xe thiếu quan sát">
+                    <div class="play-icon" data-video="7SW5ZpUnOJ8">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Dịch vụ duy nhất về bảo vệ tính mạng khi tham gia học lái xe</h3>
-                    <p class="video-description">Hướng dẫn thoát hiểm bảo vệ tính mạng khi tham gia học lái xe</p>
+                    <h3 class="video-title">Tình huống nguy hiểm khi lùi xe thiếu quan sát gây tai nạn</h3>
+                    <p class="video-description">Tình huống khi tham gia giao thông, đặc biệt là khi lùi xe, rất dễ xảy ra tai nạn nếu không chú ý đến điểm mù của xe.</p>
                     <div class="video-meta">
                         <span><i class="far fa-clock"></i> 12:40</span>
                         <span><i class="far fa-calendar"></i> 10/03/2025</span>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Video Player -->
-        <div class="video-player" id="videoPlayer">
-            <div class="video-container">
-                <div class="close-video" id="closeVideo">
-                    <i class="fas fa-times"></i>
+            <!-- Video 7 -->
+            <div class="video-card" data-category="simulation">
+                <div class="video-thumbnail">
+                    <img src="https://img.youtube.com/vi/VXocTs6f-S0/maxresdefault.jpg" alt="Cách xử lý khi xe bị trượt trên đường trơn">
+                    <div class="play-icon" data-video="VXocTs6f-S0">
+                        <i class="fas fa-play"></i>
+                    </div>
                 </div>
-                <div class="video-frame" id="videoFrame">
-                    <!-- YouTube iframe will be inserted here -->
+                <div class="video-info">
+                    <h3 class="video-title">Học lái xe ô tô bằng công nghệ giả lập bạn đã thử chưa? </h3>
+                    <p class="video-description">Học lái xe ô tô bằng công nghệ giả lập bạn đã thử chưa? Đăng kí ngay tại taylaimoi.com ngay hôm nay</p>
+                    <div class="video-meta">
+                        <span><i class="far fa-clock"></i> 12:40</span>
+                        <span><i class="far fa-calendar"></i> 22/07/2025</span>
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <!-- Video 8 -->
+            <div class="video-card" data-category="simulation">
+                <div class="video-thumbnail">
+                    <img src="https://img.youtube.com/vi/_7t2ClgYMAc/maxresdefault.jpg" alt="Hướng dẫn thực hành lái xe">
+                    <div class="play-icon" data-video="_7t2ClgYMAc">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">Học lái xe ô tô với công nghệ giả lập có tại Taylaimoi.com</h3>
+                    <p class="video-description">Học lái xe ô tô với công nghệ giả lập có tại Taylaimoi.com. Đăng ký ngay hôm nay để trải nghiệm.</p>
+                    <div class="video-meta">
+                        <span><i class="far fa-clock"></i> 25:10</span>
+                        <span><i class="far fa-calendar"></i> 05/04/2025</span>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!-- Video Player -->
+            <div class="video-player" id="videoPlayer">
+                <div class="video-container">
+                    <div class="close-video" id="closeVideo">
+                        <i class="fas fa-times"></i>
+                    </div>
+                    <div class="video-frame" id="videoFrame">
+                        <!-- YouTube iframe will be inserted here -->
+                    </div>
+                </div>
+            </div>
     </section>
 
     <!-- Partners Section -->
