--- a/Video.html
+++ b/Video.html
@@ -489,8 +489,8 @@
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Học lái xe ô tô với công nghệ giả lập có tại Taylaimoi.com</h3>
-                    <p class="video-description">Học lái xe ô tô với công nghệ giả lập có tại Taylaimoi.com. Đăng ký ngay hôm nay để trải nghiệm.</p>
+                    <h3 class="video-title">Học lái xe ô tô với công nghệ giả lập tại Taylaimoi.com</h3>
+                    <p class="video-description">Học lái xe ô tô với công nghệ giả lập tại Taylaimoi.com. Đăng ký ngay hôm nay để trải nghiệm.</p>
                     <div class="video-meta">
                         <span><i class="far fa-clock"></i> 25:10</span>
                         <span><i class="far fa-calendar"></i> 05/04/2025</span>
