--- a/exam.html
+++ b/exam.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="assets/style_exam.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
 </head>
 
@@ -22,6 +23,7 @@
                 <a href="index.html">
                     <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
                 </a>
+
             </div>
             <h2 class="title" style="color: brown;">Thông tin của bạn</h2>
             <p class="description">Vui lòng cung cấp đầy đủ các thông tin của bạn trước khi bắt đầu làm bài</p>
@@ -61,7 +63,14 @@
             <p class="skip-text">Bạn là học viên của Taylaimoi.com? Lựa chọn xác nhận ngay</p>
             <button class="btn-skip-info" id="skip-info-btn">Xác nhận học viên <i class="bi bi-arrow-right-circle-fill"></i> </button>
         </div> -->
-        <div class="sub-text"> (©) Bản quyền từ Taylaimoi.com</div>
+        <div class="sub-text"> (©) Bản quyền từ Taylaimoi.com
+            <br>
+            <span>
+                <button type="button" style="margin: 16px; border-radius: 60px;"> <a href="index.html" style="text-decoration: none; color: #212122;"> 
+                <i class="fa-solid fa-arrow-left"></i> Về trang chủ</a></button>
+            </span>
+        </div>
+
     </div>
 
     <!-- Phần chọn loại đề thi -->
