--- a/exam.html
+++ b/exam.html
@@ -12,6 +12,33 @@
     <link rel="stylesheet" href="assets/style_exam.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+    <!-- Thêm thư viện font Roboto hỗ trợ tiếng Việt -->
+    <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+    <script>
+        // Đăng ký font Roboto hỗ trợ tiếng Việt
+        window.addEventListener('load', () => {
+            if (window.jspdf) {
+                const {
+                    jsPDF
+                } = window.jspdf;
+
+                // Tạo font Roboto base64
+                const Roboto = "AAEAAAAQAQAABAAgRkZUTXrZ..."; // (Font base64 đã được rút gọn)
+
+                jsPDF.API.addFont = function(base64, fontName, fontStyle) {
+                    this.internal["fonts"][fontName] = {
+                        fontName: fontName,
+                        fontStyle: fontStyle || "normal",
+                        font: base64
+                    };
+                };
+
+                jsPDF.API.addFont(Roboto, "Roboto", "normal");
+            }
+        });
+    </script>
 
 </head>
 
@@ -182,6 +209,7 @@
             <p id="result-message"></p>
             <div class="button-group">
                 <button class="btn retry" id="restart-btn">Làm lại bài trắc nghiệm</button>
+                <button class="btn pdf" id="download-pdf">Tải kết quả PDF</button>
                 <a class="btn home" href="index.html" id="btn-home"> Về trang chủ</a>
             </div>
         </div>
