--- a/Gallery.html
+++ b/Gallery.html
@@ -327,7 +327,7 @@
     <footer id="footer">
         <div class="footer-content">
             <p><strong>www.Taylaimoi.com</strong></p>
-            <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
+            <p>Địa chỉ: 143 Trần Phú, Phường Hà Đông, TP.Hà Nội</p>
             <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook">
                 <img src="image/icons8_facebook.svg" alt="Chat Facebook"> Facebook Taylaimoi
             </a>
@@ -348,6 +348,8 @@
             </div>
         </div>
     </footer>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
