--- a/Meo.html
+++ b/Meo.html
@@ -400,7 +400,7 @@
     <footer id="footer">
         <div class="footer-content">
             <p><strong>www.Taylaimoi.com</strong></p>
-            <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
+            <p>Địa chỉ: 143 Trần Phú, Phường Hà Đông, TP.Hà Nội</p>
             <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook">
                 <img src="image/icons8_facebook.svg" alt="Chat Facebook"> Facebook Taylaimoi
             </a>
@@ -421,7 +421,12 @@
             </div>
         </div>
     </footer>
-
+    <!-- Button giải pháp -->
+    <div class="guide-button-container">
+        <a href="giaidap.html" class="guide-button-image" title=" GIẢI ĐÁP, HƯỚNG DẪN HỌC ONLINE 600 & 120 MÔ PHỎNG">
+            <img src="image/btn-giaiphap.png" alt=" GIẢI ĐÁP, HƯỚNG DẪN HỌC ONLINE 600 & 120 MÔ PHỎNG">
+        </a>
+    </div>
     <section class="contact-section">
         <a href="tel:0989465167" class="call-button" title="Gọi ngay"><i class="fas fa-phone"></i></a>
     </section>
