--- a/giaidap.html
+++ b/giaidap.html
@@ -401,7 +401,7 @@
                     body: formData
                 })
                 .then(response => {
-                    alert('Cảm ơn bạn đã đăng ký! Chúng tôi sẽ liên hệ với bạn sớm.');
+                    alert('Cảm ơn bạn đã đăng ký! Chúng tôi sẽ liên hệ với bạn sớm nhất.');
                     this.reset();
                 })
                 .catch(error => alert('Lỗi gửi dữ liệu!'));
@@ -416,7 +416,7 @@
                     body: formData
                 })
                 .then(response => {
-                    alert('Yêu cầu hỗ trợ đã được gửi! Chúng tôi sẽ liên hệ với bạn sớm.');
+                    alert('Yêu cầu hỗ trợ đã được gửi! Chúng tôi sẽ liên hệ với bạn sớm nhất.');
                     this.reset();
                 })
                 .catch(error => alert('Lỗi gửi dữ liệu!'));
