--- a/giaidap.html
+++ b/giaidap.html
@@ -191,8 +191,8 @@
 
         <!-- Hỗ trợ online trực tiếp -->
         <section class="support-section">
-            <h2>HỖ TRỢ ONLINE TRỰC TIẾP 1:1</h2>
-            <p>Được cung cấp lộ trình học riêng từng học viện và kiểm tra phân tích hàng ngày. Bạn có thắc mắc cần giải đáp ngay? Hãy điền thông tin bên dưới, đội ngũ hỗ trợ của chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
+            <h2>HỖ TRỢ HỌC ONLINE TRỰC TIẾP 1:1</h2>
+            <p>Được cung cấp lộ trình học riêng từng học viên và kiểm tra phân tích hàng ngày. Bạn có thắc mắc cần giải đáp ngay? Hãy điền thông tin bên dưới, đội ngũ giáo viên hỗ trợ của chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
             <!-- <form class="support-form">
                 <input type="text" placeholder="Họ và tên" required>
                 <input type="tel" placeholder="Số điện thoại" required>
