--- a/giaidap.html
+++ b/giaidap.html
@@ -101,7 +101,7 @@
                     <button class="watch-btn" onclick="openVideo(1)">Xem</button>
                 </div> -->
                 <div class="video-section video-info">
-                    <h3>Video 1: 60 câu điểm liệt</h3>
+                    <h3>Video 1: 60 câu điểm liệt (đang cập nhật lại)</h3>
                     <button class="watch-btn" id="btn-watch-video" data-video="https://www.youtube.com/embed/Kh0ZXVpW0r4">Xem</button>
                 </div>
             </div>
