--- a/giaidap.html
+++ b/giaidap.html
@@ -170,7 +170,7 @@
         <!-- Popup -->
         <div id="popup" class="popup">
             <div class="popup-content">
-                <h2>Chỉ với 200k - Nhận đầy đủ toàn bộ 6 video và hỗ trợ học online</h2>
+                <h2>TAYLAIMOI.COM cảm ơn Quý khách hàng bằng gói Hỗ Trợ lý Thuyết trị giá 500k</h2>
                 <p>Vui lòng điền thông tin để đăng ký mua gói dịch vụ. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
 
                 <form id="form-6video">
