--- a/giaidap.html
+++ b/giaidap.html
@@ -170,7 +170,7 @@
         <!-- Popup -->
         <div id="popup" class="popup">
             <div class="popup-content">
-                <h2>TAYLAIMOI.COM cảm ơn Quý khách hàng bằng gói Hỗ Trợ lý Thuyết trị giá 500k</h2>
+                <h2>TAYLAIMOI.COM cảm ơn Quý khách hàng bằng gói Hỗ Trợ lý Thuyết & Mô Phỏng trị giá 500.000đ</h2>
                 <p>Vui lòng điền thông tin để đăng ký mua gói dịch vụ. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
 
                 <form id="form-6video">
@@ -191,7 +191,7 @@
 
         <!-- Hỗ trợ online trực tiếp -->
         <section class="support-section">
-            <h2>HỖ TRỢ HỌC ONLINE TRỰC TIẾP 1:1</h2>
+            <h2>TAYLAIMOI.COM cảm ơn Quý khách hàng bằng gói Hỗ Trợ Lý Thuyết & Mô Phỏng trị giá 500.000đ</h2>
             <p>Được cung cấp lộ trình học riêng từng học viên và kiểm tra phân tích hàng ngày. Bạn có thắc mắc cần giải đáp ngay? Hãy điền thông tin bên dưới, đội ngũ giáo viên hỗ trợ của chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
             <!-- <form class="support-form">
                 <input type="text" placeholder="Họ và tên" required>
