--- a/giaidap.html
+++ b/giaidap.html
@@ -170,7 +170,7 @@
         <!-- Popup -->
         <div id="popup" class="popup">
             <div class="popup-content">
-                <h2>Hỗ Trợ “Tri Ân” quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy và gói học lý thuyết 500.000đ và hỗ trợ trước lái và sau lái</h2>
+                <h2>Hỗ Trợ “Tri Ân” quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy & gói học lý thuyết 500.000đ - hỗ trợ trước lái & sau lái</h2>
                 <p>Vui lòng điền thông tin để đăng ký mua gói dịch vụ. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
 
                 <form id="form-6video">
@@ -191,7 +191,7 @@
 
         <!-- Hỗ trợ online trực tiếp -->
         <section class="support-section">
-            <h2>Hỗ Trợ “Tri Ân” quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy và gói học lý thuyết 500.000đ và hỗ trợ trước lái và sau lái</h2>
+            <h2>Hỗ Trợ “Tri Ân” quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy & gói học lý thuyết 500.000đ - hỗ trợ trước lái & sau lái</h2>
             <p>Được cung cấp lộ trình học riêng từng học viên và kiểm tra phân tích hàng ngày. Bạn có thắc mắc cần giải đáp ngay? Hãy điền thông tin bên dưới, đội ngũ giáo viên hỗ trợ của chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
             <!-- <form class="support-form">
                 <input type="text" placeholder="Họ và tên" required>
