--- a/giaidap.html
+++ b/giaidap.html
@@ -171,7 +171,7 @@
         <div id="popup" class="popup">
             <div class="popup-content">
                 <h2>Hỗ Trợ “Tri Ân” quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy & gói học lý thuyết 500.000đ - hỗ trợ trước lái & sau lái</h2>
-                <p>Vui lòng điền thông tin để đăng ký mua gói dịch vụ. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
+                <p>Vui lòng điền thông tin để đăng ký chương trình. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
 
                 <form id="form-6video">
                     <input type="text" name="name" placeholder="Họ và tên" required>
