--- a/giaidap.html
+++ b/giaidap.html
@@ -171,7 +171,7 @@
         <div id="popup" class="popup">
             <div class="popup-content">
                 <h2>“Tri Ân” quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy & gói học lý thuyết 500.000đ - hỗ trợ trước lái & sau lái</h2>
-                <p>Vui lòng điền thông tin để đăng ký chương trình. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
+                <p>Vui lòng điền thông tin để đăng ký chương trình. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất. (Vui lòng để số điện thoại có zalo)</p>
 
                 <form id="form-6video">
                     <input type="text" name="name" placeholder="Họ và tên" required>
@@ -192,7 +192,8 @@
         <!-- Hỗ trợ online trực tiếp -->
         <section class="support-section">
             <h2>Tri Ân quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy & gói học lý thuyết 500.000đ - hỗ trợ trước lái & sau lái</h2>
-            <p>Được cung cấp lộ trình học riêng từng học viên và kiểm tra phân tích hàng ngày. Bạn có thắc mắc cần giải đáp ngay? Hãy điền thông tin bên dưới, đội ngũ giáo viên hỗ trợ của chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
+            <p>Được cung cấp lộ trình học riêng từng học viên và kiểm tra phân tích hàng ngày. Bạn có thắc mắc cần giải đáp ngay? Hãy điền thông tin bên dưới, đội ngũ giáo viên hỗ trợ của chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất (Vui lòng để
+                số điện thoại có zalo).</p>
             <!-- <form class="support-form">
                 <input type="text" placeholder="Họ và tên" required>
                 <input type="tel" placeholder="Số điện thoại" required>
