--- a/giaidap.html
+++ b/giaidap.html
@@ -87,6 +87,7 @@
         <section class="intro">
             <h1>GIẢI ĐÁP, HƯỚNG DẪN HỌC ONLINE 600 CÂU & 120 TÌNH HUỐNG MÔ PHỎNG</h1>
             <p>Chào mừng bạn đến với trang hỗ trợ học và giải đáp thắc mắc về bộ đề 600 câu hỏi sát hạch lái xe và 120 tình huống mô phỏng. Tại đây, bạn có thể xem các video hướng dẫn chi tiết và đăng ký dịch vụ hỗ trợ học tập.</p>
+            <i style="font-weight: bold; color: #b30000;">Các video hiện tại đang được cập nhật..., vui lòng để lại thông tin để nhận video mới nhất</i>
         </section>
 
         <!-- Video Grid -->
@@ -170,9 +171,8 @@
         <!-- Popup -->
         <div id="popup" class="popup">
             <div class="popup-content">
-                <h2>“Tri Ân” quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy & gói học lý thuyết 500.000đ - hỗ trợ trước lái & sau lái</h2>
-                <p>Vui lòng điền thông tin để đăng ký chương trình. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất. (Vui lòng để số điện thoại có zalo)</p>
-
+                <h2>TRI ÂN KHÁCH HÀNG ĐĂNG KÝ HỌC LÁI XE Ô TÔ TẠI TAYLAIMOI.COM</h2>
+                <p>Vui lòng điền thông tin số điện thoại có zalo để đăng ký chương trình. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
                 <form id="form-6video">
                     <input type="text" name="name" placeholder="Họ và tên" required>
                     <input type="tel" name="phone" placeholder="Số điện thoại" required>
@@ -191,9 +191,30 @@
 
         <!-- Hỗ trợ online trực tiếp -->
         <section class="support-section">
-            <h2>Tri Ân quý khách hàng đã học tại Taylaimoi.com bằng 3 gói giá trị tinh thần, tặng hồ sơ xe máy & gói học lý thuyết 500.000đ - hỗ trợ trước lái & sau lái</h2>
-            <p>Được cung cấp lộ trình học riêng từng học viên và kiểm tra phân tích hàng ngày. Bạn có thắc mắc cần giải đáp ngay? Hãy điền thông tin bên dưới, đội ngũ giáo viên hỗ trợ của chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất (Vui lòng để
-                số điện thoại có zalo).</p>
+            <h2>TRI ÂN KHÁCH HÀNG ĐĂNG KÝ HỌC LÁI XE Ô TÔ TẠI TAYLAIMOI.COM</h2>
+            <p>Vui lòng điền thông tin số điện thoại có zalo để đăng ký chương trình. Chúng tôi sẽ liên hệ với bạn trong thời gian sớm nhất.</p>
+            <table class="table-from">
+                <thead>
+                    <tr>
+                        <th>STT</th>
+                        <th>Nội dung ưu đãi</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td data-label="STT">1</td>
+                        <td data-label="Nội dung ưu đãi">Tặng 1 bộ hồ sơ xe máy</td>
+                    </tr>
+                    <tr>
+                        <td data-label="STT">2</td>
+                        <td data-label="Nội dung ưu đãi">Tặng khóa học lý thuyết & mô phỏng</td>
+                    </tr>
+                    <tr>
+                        <td data-label="STT">3</td>
+                        <td data-label="Nội dung ưu đãi">Hỗ trợ bổ túc trước và sau khi có bằng, kể cả học viên chưa đủ tuổi thi bằng ô tô</td>
+                    </tr>
+                </tbody>
+            </table>
             <!-- <form class="support-form">
                 <input type="text" placeholder="Họ và tên" required>
                 <input type="tel" placeholder="Số điện thoại" required>
