--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <hr>
 
                 <div class="tab-panel active" id="tab250">
-                    <button class="practice-btn" data-chapter="250"><a href="https://forms.gle/K5euZPoN4uqPpknD7" target="_blank">➜ Luyện tập ngay 250</a></button>
+                    <button class="practice-btn" data-chapter="250"><a href="https://forms.gle/3x2CYcxVL2DeiyUk6" target="_blank">➜ Luyện tập ngay 250</a></button>
                 </div>
                 <div class="tab-panel" id="tab250-1">
                     <button class="practice-btn" data-chapter="1"><a href="https://forms.gle/29K4nkdBUKLXrTeNA" target="_blank">➜ Luyện ôn ngay chương 1</a></button>
