--- a/index.html
+++ b/index.html
@@ -292,19 +292,19 @@
                     <button class="practice-btn" data-chapter="250"><a href="https://forms.gle/3x2CYcxVL2DeiyUk6" target="_blank">➜ Luyện tập ngay 250</a></button>
                 </div>
                 <div class="tab-panel" id="tab250-1">
-                    <button class="practice-btn" data-chapter="1"><a href="https://forms.gle/29K4nkdBUKLXrTeNA" target="_blank">➜ Luyện ôn ngay chương 1</a></button>
+                    <button class="practice-btn" data-chapter="1"><a href="#" target="_blank">➜ Luyện ôn ngay chương 1<p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a></button>
                 </div>
                 <div class="tab-panel" id="tab250-2">
-                    <button class="practice-btn" data-chapter="2"><a href="https://forms.gle/eouyCsV8TV2mw944A"target="_blank">➜ Luyện ôn ngay chương 2</a></button>
+                    <button class="practice-btn" data-chapter="2"><a href="#"target="_blank">➜ Luyện ôn ngay chương 2<p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a></button>
                 </div>
                 <div class="tab-panel" id="tab250-3">
-                    <button class="practice-btn" data-chapter="3"><a href="https://forms.gle/2ByK9qbsqAPb2QfLA"target="_blank">➜ Luyện ôn ngay chương 3</a></button>
+                    <button class="practice-btn" data-chapter="3"><a href="#"target="_blank">➜ Luyện ôn ngay chương 3<p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a></button>
                 </div>
                 <div class="tab-panel" id="tab250-4">
-                    <button class="practice-btn" data-chapter="4"><a href="https://forms.gle/jTy8AJkDyS7M9w2b8"target="_blank">➜ Luyện ôn ngay chương 4</a></button>
+                    <button class="practice-btn" data-chapter="4"><a href="#"target="_blank">➜ Luyện ôn ngay chương 4<p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a></button>
                 </div>
                 <div class="tab-panel" id="tab250-5">
-                    <button class="practice-btn" data-chapter="5"><a href="https://forms.gle/xwwNDfGfygX5SMh47"target="_blank">➜ Luyện ôn ngay chương 5</a></button>
+                    <button class="practice-btn" data-chapter="5"><a href="#"target="_blank">➜ Luyện ôn ngay chương 5<p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a></button>
                 </div>
             </div>
         </section>
