Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -375,6 +375,10 @@
                     </div>
 
                     <div class="partner-logo">
+                        <img src="image/Logo/Daidung-logo.png" alt="Partner 1">
+                    </div>
+
+                    <div class="partner-logo">
                         <img src="image/Logo/taylaimoi-logo.png" alt="Partner 3">
                     </div>
 
@@ -822,5 +826,6 @@
 </html>
 
 </html>
+
 
 </html>
