Update logo dai dung

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     </div>
 
                     <div class="partner-logo">
-                        <img src="image/Logo/Daidung-logo.png" alt="Partner 1">
+                        <img src="image/Logo/Daidung-logo.png" alt="Partner Đại Dũng">
                     </div>
 
                     <div class="partner-logo">
@@ -829,3 +829,4 @@
 
 
 </html>
+
